# rust-dependabot-testing

./: .gitignore  Cargo.toml  LICENSE  deny.toml  package-lock.json  package.json
.github/workflows/: ci-test.yml
src/: main.rs
