[package]
name = "rust-dependabot-testing"
version = "0.1.0"
edition = "2021"

[toolchain]
channel = "stable"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
async-std = "1.12.0"
axum = "0.5.14"
jsonwebtoken = "8.1.1"
mongodb = "2.3.0"
oauth2 = "4.2.3"
redis = "0.21.5"
serde = "1.0.140"
serde_json = "1.0.82"
sqlx = { version = "0.6.0", features = ["runtime-async-std-native-tls"] }
tokio = "1.20.1"
warp = "0.3.2"
